--- a/frontend/src/styles/style2.css
+++ b/frontend/src/styles/style2.css
@@ -312,5 +312,17 @@
     margin: 0.4rem 0;
   }
 
-
+  .star-input-wrapper {
+    display: flex;
+    align-items: center;
+    width: 300px;
+    height: 50px;
+    padding: 1em;
+    font: inherit;
+    background-color: var(--input-color);
+    border: 2px solid var(--input-color);
+    border-left: none;
+    border-radius: 0 10px 10px 0;
+    box-sizing: border-box;
+  }
   
